# egui-hello

./: Cargo.toml  README.md  flake.nix
assets/: index.html
src/: lib.rs  main.rs  web.rs
xtask/: Cargo.toml
xtask/src/: main.rs
