[package]
name = "egui-hello"
version = "0.1.0"
edition = "2024"
description = 'Simple egui/eframe "Hello, world!" desktop and web application'

[workspace]
members = [ "xtask" ]

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
eframe = { version = "0.34", features = [ "persistence" ] }
serde = { version = "1", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "HtmlCanvasElement" ] }
log = "0.4"
